<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#FAFAFA">


    <!--ListView-->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        >

        <ListView
            android:id="@+id/milista"

            android:visibility="gone"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:listSelector="@android:color/transparent"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            />
    </android.support.v4.widget.SwipeRefreshLayout>
    <!--FIN ListView-->


    <!--Texto de carga-->
    <TextView
        android:id="@+id/textoCarga"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="23sp"
        android:padding="5dp"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cargando"
        android:visibility="visible"/>

    <!-- FIN Texto de carga -->

    <!-- Progress bar -->
    <ProgressBar
        android:id="@+id/barra_progreso"
        android:paddingTop="10dp"
        android:layout_below="@id/textoCarga"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"/>

    <!--FIN progress bar -->

    <!--Texto internet-->
    <TextView
        android:id="@+id/textoInternet"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="23sp"
        android:padding="5dp"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/internet"
        android:visibility="gone"/>

    <!-- FIN Texto de internet -->


    <!--Texto de no votaciones-->
    <TextView
        android:id="@+id/no_eventos"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="23sp"
        android:padding="5dp"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/noEventos"
        android:visibility="gone"/>

    <!-- FIN Texto de no votaciones -->



</RelativeLayout>
